CCompiler/src/CCompiler/Compilatudo.java
/* Compilatudo.java */
/* Generated By:JavaCC: Do not edit this line. Compilatudo.java */
package CCompiler;

import java.io.*;
import java.util.Scanner;
import recovery.*;

public class Compilatudo implements CompilatudoConstants {
    public static boolean debug_messages = true;
    public static boolean debug_recovery = true;
    int countParseError = 0;

    public static void main(String[] args) throws ParseException {
        Scanner scan = new Scanner(System.in);
        String nome_arquivo;

        System.out.println("Working Directory = " +
        System.getProperty("user.dir"));

        System.out.println("Entre com o nome do Arquivo ");
        Compilatudo parser = null;

        // nome_arquivo = scan.nextLine();
        nome_arquivo = "entrada.c";

        try {
            parser = new Compilatudo(new java.io.FileInputStream(nome_arquivo));
        } catch(java.io.FileNotFoundException e) {
            if(debug_messages)
                System.out.println(e.getMessage());
        }

        try {
            if (parser != null) {
                parser.program();
            }
        }
        catch(ParseEOFException e) {
            System.out.println(e.getMessage());
        } finally {
            if (parser != null && debug_messages) {
                if(parser.token_source.foundLexError() != 0) {
                    System.out.println("Total de erros lexicos: " + parser.token_source.foundLexError());
                } else {
                    System.out.println("Sem erros lexicos!");
                }
                if(parser.countParseError != 0) {
                    System.out.println("Total de erros sintaticos: " + parser.countParseError);
                } else {
                    System.out.println("Sem erros sintaticos!");
                }
            }
        }

        scan.close();
    }

    static public String im(int x) {
        int k;
        String s;
        s = tokenImage[x];
        k = s.lastIndexOf("\"");

        try {
            s = s.substring(1, k);
        } catch(StringIndexOutOfBoundsException e) {
            if(debug_messages)
                System.out.println(e.getMessage());
        }

        return s;
    }

    boolean eof = false;

    void consumeUntil(RecoverySet g, ParseException e, String met) throws ParseEOFException, ParseException {
        Token tok;

        if (debug_recovery) { // informa????o sobre a recupera????o
            System.out.println();
            System.out.println("***" + met + "***");
            System.out.println( " sincronizando conjunto: " + g);
        }
        if (g == null) throw e; // se o conjunto for nulo, propaga a exce????o

        tok = getToken(1); // pega o token corrente
        while (!eof) {// se n??o chegou ao fim do arquivo
            if(g.contains(tok.kind) ) {// achou o token conjunto
                if (debug_recovery)
                    System.out.println ("\tAchou o token de sincroniza\ufffd\ufffd\ufffd\ufffdo : " + im(tok.kind));
                break;
            }
            if (debug_recovery)
                System.out.println("  ignorando token : " + im(tok.kind));
            getNextToken();
            tok = getToken(1);
            if (debug_recovery)
                System.out.println("    token atual : " + im(tok.kind));
            if (tok.kind == EOF && g.contains(EOF)) // fim da entrada
                eof = true;
        }
        if(debug_messages)
            System.out.println(e.getMessage());
        countParseError++; // incrementa o numero de erros
        if (eof) throw new ParseEOFException("EOF achado prematuramente.");

    }

  final public void program() throws ParseException, ParseEOFException {    try {
RecoverySet g = First.program;
      try {
        label_1:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case INT:
          case FLOAT:
          case VOID:
          case CHAR:
          case DOUBLE:
          case HASHTAG:{
            ;
            break;
            }
          default:
            jj_la1[0] = jj_gen;
            break label_1;
          }
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case HASHTAG:{
            preprocessor(g);
            break;
            }
          default:
            jj_la1[1] = jj_gen;
            if (jj_2_1(3)) {
              func_decl();
            } else {
              switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
              case INT:
              case FLOAT:
              case CHAR:
              case DOUBLE:{
                var_decl();
                break;
                }
              default:
                jj_la1[2] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
          }
        }
        jj_consume_token(0);
      } catch (ParseException e) {
consumeUntil(g, e, "program");
      }
    } finally {
      trace_return("program");
    }
}

  final public void preprocessor(RecoverySet g) throws ParseException, ParseEOFException {    try {

      try {
        if (jj_2_2(3)) {
          jj_consume_token(HASHTAG);
          jj_consume_token(INCLUDE);
          jj_consume_token(LT);
          jj_consume_token(ID);
          jj_consume_token(DOT);
          jj_consume_token(ID);
          jj_consume_token(GT);
        } else if (jj_2_3(3)) {
          jj_consume_token(HASHTAG);
          jj_consume_token(INCLUDE);
          jj_consume_token(70);
          jj_consume_token(ID);
          jj_consume_token(DOT);
          jj_consume_token(ID);
          jj_consume_token(70);
        } else if (jj_2_4(2)) {
          jj_consume_token(HASHTAG);
          jj_consume_token(DEFINE);
          jj_consume_token(ID);
          jj_consume_token(ID);
        } else {
          jj_consume_token(-1);
          throw new ParseException();
        }
      } catch (ParseException e) {
consumeUntil(g, e, "preprocessor");
      } finally {
System.out.print("}");
      }
    } finally {
      trace_return("preprocessor");
    }
}

  final public void func_decl() throws ParseException {    try {

      func_type();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ID:{
        jj_consume_token(ID);
        break;
        }
      case MAIN:{
        jj_consume_token(MAIN);
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(LPAREN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case CHAR:
      case DOUBLE:{
        parameter_list();
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        ;
      }
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      body();
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case RETURN:{
        return_val();
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      jj_consume_token(RBRACE);
    } finally {
      trace_return("func_decl");
    }
}

  final public void func_type() throws ParseException {    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
        break;
        }
      case DOUBLE:{
        jj_consume_token(DOUBLE);
        break;
        }
      case CHAR:{
        jj_consume_token(CHAR);
        break;
        }
      case FLOAT:{
        jj_consume_token(FLOAT);
        break;
        }
      case VOID:{
        jj_consume_token(VOID);
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("func_type");
    }
}

  final public void parameter_list() throws ParseException {    try {

      var_type();
      jj_consume_token(ID);
      label_2:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[7] = jj_gen;
          break label_2;
        }
        jj_consume_token(COMMA);
        var_type();
        jj_consume_token(ID);
      }
    } finally {
      trace_return("parameter_list");
    }
}

  final public void body() throws ParseException {    try {

      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case IF:
        case FLOAT:
        case WHILE:
        case CHAR:
        case FOR:
        case DOUBLE:
        case PLUS:
        case MINUS:
        case INC:
        case DEC:
        case LPAREN:
        case int_constant:
        case float_constant:
        case char_constant:
        case string_constant:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_3;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case INT:
        case FLOAT:
        case CHAR:
        case DOUBLE:{
          decl();
          break;
          }
        case PLUS:
        case MINUS:
        case INC:
        case DEC:
        case LPAREN:
        case int_constant:
        case float_constant:
        case char_constant:
        case string_constant:
        case ID:{
          comando();
          break;
          }
        case IF:
        case WHILE:
        case FOR:{
          desvio();
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
      trace_return("body");
    }
}

  final public void decl() throws ParseException {    try {

      var_decl();
    } finally {
      trace_return("decl");
    }
}

  final public void comando() throws ParseException {    try {

      expr_value();
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("comando");
    }
}

  final public void desvio() throws ParseException {    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:{
        if_cond();
        break;
        }
      case WHILE:{
        while_cond();
        break;
        }
      case FOR:{
        for_cond();
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("desvio");
    }
}

  final public void var_attr() throws ParseException {    try {

      jj_consume_token(ID);
      jj_consume_token(ASSIGN);
      expr_value();
    } finally {
      trace_return("var_attr");
    }
}

  final public void func_call() throws ParseException {    try {

      jj_consume_token(ID);
      jj_consume_token(LPAREN);
      expr_list();
      jj_consume_token(RPAREN);
    } finally {
      trace_return("func_call");
    }
}

  final public void expr_list() throws ParseException {    try {

      expr_value();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[11] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        expr_value();
      }
    } finally {
      trace_return("expr_list");
    }
}

  final public void var_type() throws ParseException {    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:{
        jj_consume_token(INT);
        break;
        }
      case DOUBLE:{
        jj_consume_token(DOUBLE);
        break;
        }
      case CHAR:{
        jj_consume_token(CHAR);
        break;
        }
      case FLOAT:{
        jj_consume_token(FLOAT);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("var_type");
    }
}

  final public void while_cond() throws ParseException {    try {

      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      expr_value();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      body();
      jj_consume_token(RBRACE);
    } finally {
      trace_return("while_cond");
    }
}

  final public void for_cond() throws ParseException {    try {

      jj_consume_token(FOR);
      jj_consume_token(LPAREN);
      expr_list();
      jj_consume_token(SEMICOLON);
      expr_list();
      jj_consume_token(SEMICOLON);
      expr_list();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      body();
      jj_consume_token(RBRACE);
    } finally {
      trace_return("for_cond");
    }
}

  final public void num_const() throws ParseException {    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case PLUS:{
          jj_consume_token(PLUS);
          break;
          }
        case MINUS:{
          jj_consume_token(MINUS);
          break;
          }
        default:
          jj_la1[13] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case int_constant:{
        jj_consume_token(int_constant);
        break;
        }
      case float_constant:{
        jj_consume_token(float_constant);
        break;
        }
      case char_constant:{
        jj_consume_token(char_constant);
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("num_const");
    }
}

  final public void expr_value() throws ParseException {    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INC:
      case DEC:{
        unary_operator();
        break;
        }
      default:
        jj_la1[16] = jj_gen;
        ;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case int_constant:
      case float_constant:
      case char_constant:{
        num_const();
        break;
        }
      default:
        jj_la1[17] = jj_gen;
        if (jj_2_5(2)) {
          var_attr();
        } else if (jj_2_6(2)) {
          func_call();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ID:{
            jj_consume_token(ID);
            break;
            }
          case string_constant:{
            jj_consume_token(string_constant);
            break;
            }
          case char_constant:{
            jj_consume_token(char_constant);
            break;
            }
          case LPAREN:{
            jj_consume_token(LPAREN);
            expr_value();
            jj_consume_token(RPAREN);
            break;
            }
          default:
            jj_la1[18] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      if (jj_2_7(2)) {
        unary_operator();
      } else {
        ;
      }
      if (jj_2_8(2)) {
        binary_operator();
        expr_value();
      } else {
        ;
      }
    } finally {
      trace_return("expr_value");
    }
}

  final public void var_decl() throws ParseException {    try {

      var_type();
      if (jj_2_9(2)) {
        var_attr();
      } else {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case ID:{
          jj_consume_token(ID);
          break;
          }
        default:
          jj_la1[19] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case COMMA:{
          ;
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          break label_5;
        }
        jj_consume_token(COMMA);
        if (jj_2_10(2)) {
          var_attr();
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case ID:{
            jj_consume_token(ID);
            break;
            }
          default:
            jj_la1[21] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("var_decl");
    }
}

  final public void binary_operator() throws ParseException {    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        break;
        }
      case MULTIPLY:{
        jj_consume_token(MULTIPLY);
        break;
        }
      case DIVIDE:{
        jj_consume_token(DIVIDE);
        break;
        }
      case MOD:{
        jj_consume_token(MOD);
        break;
        }
      case PLUS_EQ:{
        jj_consume_token(PLUS_EQ);
        break;
        }
      case MINUS_EQ:{
        jj_consume_token(MINUS_EQ);
        break;
        }
      case MULTIPLY_EQ:{
        jj_consume_token(MULTIPLY_EQ);
        break;
        }
      case DIVIDE_EQ:{
        jj_consume_token(DIVIDE_EQ);
        break;
        }
      case MOD_EQ:{
        jj_consume_token(MOD_EQ);
        break;
        }
      case LEFT_SHIFT:{
        jj_consume_token(LEFT_SHIFT);
        break;
        }
      case RIGHT_SHIFT:{
        jj_consume_token(RIGHT_SHIFT);
        break;
        }
      case GT:{
        jj_consume_token(GT);
        break;
        }
      case LT:{
        jj_consume_token(LT);
        break;
        }
      case EQ:{
        jj_consume_token(EQ);
        break;
        }
      case LE:{
        jj_consume_token(LE);
        break;
        }
      case GE:{
        jj_consume_token(GE);
        break;
        }
      case NE:{
        jj_consume_token(NE);
        break;
        }
      case AND:{
        jj_consume_token(AND);
        break;
        }
      case OR:{
        jj_consume_token(OR);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("binary_operator");
    }
}

  final public void if_cond() throws ParseException {    try {

      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      expr_value();
      jj_consume_token(RPAREN);
      jj_consume_token(LBRACE);
      body();
      jj_consume_token(RBRACE);
    } finally {
      trace_return("if_cond");
    }
}

  final public void return_val() throws ParseException {    try {

      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:
      case INC:
      case DEC:
      case LPAREN:
      case int_constant:
      case float_constant:
      case char_constant:
      case string_constant:
      case ID:{
        expr_value();
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        ;
      }
      jj_consume_token(SEMICOLON);
    } finally {
      trace_return("return_val");
    }
}

  final public void unary_operator() throws ParseException {    try {

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INC:{
        jj_consume_token(INC);
        break;
        }
      case DEC:{
        jj_consume_token(DEC);
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
      trace_return("unary_operator");
    }
}

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_1()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_2()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_3()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(2, xla); }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_4()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(3, xla); }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_5()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(4, xla); }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_6()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(5, xla); }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_7()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(6, xla); }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_8()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(7, xla); }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_9()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(8, xla); }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return (!jj_3_10()); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(9, xla); }
  }

  private boolean jj_3_4()
 {
    if (jj_scan_token(HASHTAG)) return true;
    if (jj_scan_token(DEFINE)) return true;
    return false;
  }
